# kill-prop

./: &lt;q&gt;Product scopeYour intended behavior is fe.md  .gitignore  Actually, how do I handle contradictory sources in.md  LICENSE  PLAN.md  README.md  README_LLM.md  Yes, provide the normalization algorithm logic.md  kill-prop.bat  kill-prop.sh  news.env  news.env.example  package-lock.json  package.json  plan app implementation_intended behaviour - fetch.md  playwright.config.ts  pyproject.toml
backend/: main.py  models.py  requirements-dev.txt  requirements-llm.txt  requirements.txt  storage.py
backend/pipeline/: __init__.py  clustering.py  consensus.py  ingestion.py  llm.py  llm_extraction.py  normalization.py  scoring.py
backend/routers/: __init__.py  articles.py  events.py  review.py
backend/tests/: test_analysis_quality.py  test_api.py  test_clustering.py  test_consensus.py  test_ingestion.py  test_llm_integration.py  test_normalization.py  test_scoring.py  test_storage.py
e2e/: app.spec.ts
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.css  App.tsx  labels.ts  types.ts
frontend/src/api/: client.ts
frontend/src/api/__tests__/: client.test.ts
frontend/src/components/: ArticleViewer.tsx  EventCard.tsx  EventDetail.tsx  EventFeed.tsx  PipelineRunner.tsx  ReviewConsole.tsx
frontend/src/components/__tests__/: ArticleViewer.test.tsx  EventCard.test.tsx  EventDetail.test.tsx  EventFeed.test.tsx  (+2 more)
frontend/src/test/: fixtures.ts
test-results/: .last-run.json
