[project]
name = "kill-prop"
version = "0.1.1"
description = "Source-triangulation news analysis system — compares reporting across Western and Russian-source pools, identifies overlapping verified facts, and exposes framing divergences."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "llama-cpp-python",
    "huggingface_hub",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
